# workflow

./: .gitignore  README.md  go.mod  go.sum  requirements.txt  setup.cfg
.github/workflows/: go.yml
cmd/workflow-manager/: main.go
cmd/workflow-manager/static/: index.html  job.html  job.js  main.js  workflow.html  workflow.js
examples/word-counts/: README.md  book_split.py  config.yaml  segment_word_counts.py  store_title.py  sum_splits.py  test.sh
examples/word-counts-js/: package-lock.json  package.json  test.sh
examples/word-counts-js/src/: segment_word_counts.ts  sum_splits.ts
jsworker/: package-lock.json  package.json  tsconfig.json  tsconfig.test.json
jsworker/src/: index.ts  worker.spec.ts  worker.ts
pkg/api/: api.go  api_test.go
pkg/config/: parser.go  parser_test.go  types.go
pkg/config/testdata/: config.yaml  errInvalidDependency.yaml  errNamePattern.yaml  errNoTask.yaml
pkg/engine/: engine.go  engine_test.go  message_bus.go  store.go  types.go  workflow.go
pkg/engine/testdata/: mpath.yaml  simple.yaml  task.yaml
pkg/mbus/: config.go  rabbitmq.go  rabbitmq_test.go
pkg/store/: recover_test.go  sqlite.go  sqlite_test.go
pyworker/: dispatcher.py  tornado.py  tornado_test.py
