[metadata]
name = workflow-worker
version = 0.0.1
author = Pedro Marques
author_email = pedro.r.marques@gmail.com
description = Workflow manager worker libraries
url = https://github.com/pedro-r-marques/workflow-manager

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.6
install_requires =
    pika ==1.2.0
    tornado ==6.1

[options.packages.find]
where = .